cluster/apps/books/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books
  namespace: books
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: books
  template:
    metadata:
      labels:
        app.kubernetes.io/name: books
    spec:
      containers:
        - name: calibre-web-automated
          image: crocodilestick/calibre-web-automated:v4.0.6
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8083
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 2
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: library
              mountPath: /calibre-library
            - name: ingest
              mountPath: /cwa-book-ingest
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: books-config
        - name: library
          persistentVolumeClaim:
            claimName: books-library
        - name: ingest
          persistentVolumeClaim:
            claimName: books-ingest
