cluster/apps/books/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: books
  namespace: books
spec:
  ingressClassName: traefik
  rules:
    - host: books.yadunut.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: books
                port:
                  name: http
  tls:
    - hosts:
        - books.yadunut.dev
      secretName: books-tls
